<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/enter_your_name"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toppings"
                android:layout_marginBottom="16dp"
                android:text="@string/toppings"
                style="@style/HeaderTextStyle"
                android:textColor="#9e9e9e" />

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/whipped_cream"
                style="@style/text_p"/>

            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/chocolate"
                style="@style/text_p" />

        </LinearLayout>

        <TextView
            android:id="@+id/quantity"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            android:textColor="#9E9E9E" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/decrement_symbol" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="increment"
                android:text="@string/increment_symbol" />

        </LinearLayout>

        <TextView
            android:id="@+id/price"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/HeaderTextStyle"
            android:text="@string/order_summary"
            android:textColor="#9E9E9E" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>
